# network_parcel_corr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: run_tests.yaml
scripts/: README.md  run_corr.py  run_corr.sh
src/network_parcel_corr/: __init__.py  main.py
src/network_parcel_corr/atlases/: load.py
src/network_parcel_corr/core/: similarity.py
src/network_parcel_corr/data/: construct_mappings.py
src/network_parcel_corr/io/: readers.py  writers.py
src/network_parcel_corr/parallel/: main.py  optimization.py  similarity.py
src/network_parcel_corr/postprocessing/: analysis.py  export.py
tests/: conftest.py  test_atlas.py  test_dataset.py  test_io_modules.py  test_main.py  test_main_modules.py  test_postprocessing.py  test_readers.py  test_scripts.py  test_similarity_modules.py
