[project]
name = "network_parcel_corr"
version = "0.1.0"
description = "Neuroimaging analysis pipeline for computing parcel correlation patterns in the Network dataset contrast maps."
readme = "README.md"
authors = [
    { name = "Logan Bennett", email = "logben@stanford.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "nibabel>=5.3.2",
    "nilearn>=0.12.1",
    "pytest>=8.4.2",
    "templateflow>=25.0.3",
]

[project.scripts]
network_parcel_corr = "network_parcel_corr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths=['tests']

[tool.pyright]
exclude = ['.venv']
venvPath = '.'
venv = '.venv'
